Updated by task 'AutomatedMDTask_1642013222451_TM-MT_1642013242622'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/169e21547dcb0db2b7c5934230a6557e540c911a

--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Publishing System 6.0
 description: '"Versionsinformation som beskriver funktioner, förbättringar och korrigeringar för Adobe Scene7 Publishing System 6.0, en del av Adobe Experience Manager lösning i Adobe Marketing Cloud."'
 solution: Experience Manager
-title: Versionsinformation om Scene7 Publishing System 6.0
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 50dddf148345d2ca5243d5d7108fefa56d23dad6
 workflow-type: tm+mt
-source-wordcount: '1080'
+source-wordcount: '1076'
 ht-degree: 0%
 
 ---
@@ -44,13 +44,13 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
 
 **Tittare**
 
-* Lagt till stöd för lokalisering av verktygstipstext i visningsförinställningarna för Flash AS3 och HTML5.
+* Stöd för lokalisering av verktygstipstext har lagts till i visningsförinställningarna för Flash AS3 och HTML5.
 * Nå ut bättre med dina videor på världsmarknaden genom att lägga in bildtexter i eVideo-material.
 * Lagt till&quot;Embed Code&quot; för att förenkla användningen av tittarna.
 
-   Med funktionen [!DNL Embed Code] kan du granska visningsprogramkoden för den valda resurstypen. Du kan också kopiera koden till Urklipp så att du kan klistra in den på dina webbsidor för att distribuera visningsprogrammet. Det är inte tillåtet att redigera koden i dialogrutan Bädda in kod. .
+   Använda [!DNL Embed Code] kan du granska visningsprogramkoden för den valda resurstypen. Du kan också kopiera koden till Urklipp så att du kan klistra in den på dina webbsidor för att distribuera visningsprogrammet. Det är inte tillåtet att redigera koden i dialogrutan Bädda in kod. .
 
-   Funktionen [!DNL Embed Code] är tillgänglig när du öppnar sidan [!DNL Preview: Viewer List] eller panelen [!DNL URLs] i [!DNL Detail View] för någon av följande resurstyper:
+   The [!DNL Embed Code] är tillgänglig när du öppnar [!DNL Preview: Viewer List] eller [!DNL URLs] panel i [!DNL Detail View] för någon av följande tillgångstyper:
 
    * Universella visningsprogram
    * Zooma
@@ -76,7 +76,7 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
    * eCatalog
    * Video_caption
 
-* Nya HTML5-visningsprogram innehåller följande:
+* Nya visningsprogram för HTML5 innehåller följande:
 
    * Zooma
    * Bilduppsättning
@@ -84,7 +84,7 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
 
 * Utökat globaliseringsstöd för tittare, inklusive lokalisering av text och grafik. Se användarhandböckerna för Flash eller HTML5 Viewer SDK som ingår i SDK-installationsprogrammet.
 * Lagt till interaktivitet i e-kataloger med inbäddade video- och snurvningsvisningsprogram.
-* Förenklad åtkomst till SDK:n för Flash och HTML5-visningsprogram från Adobe Developer Connection. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd4272150f67705c11b002eec12fcba4dee6-8000.html). -->
+* Enklare åtkomst till Flash och HTML5-visningsprogrammets SDK från Adobe Developer Connection. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd4272150f67705c11b002eec12fcba4dee6-8000.html). -->
 * Utökade universella visningsprogramprofiler - du kan nu ha flera profiler per visningsprogramtyp. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d73076df86131b02b67e8-8000.html). -->
 * Förbättrad bildleverans för telefoner med enhetsidentifiering som dynamiskt anger storlek baserat på skärmupplösning och begränsningar för filstorlek. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html). -->
 
@@ -112,7 +112,7 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
 * Utökad adaptiv strömning för stationära datorer för att dynamiskt växla videokvalitet baserat på användarens nätverksanslutning. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html).  -->
 * Kodningsförinställningar med en kryssruta kodar automatiskt till flera versioner som krävs för uppspelning på flera skärmar. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-5abae30d131ddfed85f-8000.html).  -->
 * HTTP-baserad videoströmning. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c0632156edd1369e58559f-8000.html).  -->
-* iOS-strömning för UGC-video (användargenererat innehåll). <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSe8b0455615e2dc47-2df907a712f31201b35-8000.html). -->
+* iOS direktuppspelning av UGC-video (User-Generated Content). <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSe8b0455615e2dc47-2df907a712f31201b35-8000.html). -->
 
 **Media Portal**
 
@@ -141,7 +141,7 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
    Det finns en ny fördefinierad metadatavy som heter &quot;All Properties with Values&quot; som bara visar metaegenskaper som innehåller värden. Egenskaper (från XMP, användardefinierade fält eller nya metadatascheman) utan värden är dolda och visas inte.
 * Metadatainställningarna grupperas nu i administrationsanvändargränssnittet.
 
-   I **[!UICONTROL Setup > Application Setup]** grupperas nu metadatarelaterade inställningssidor i ett avsnitt på den översta nivån med namnet [!DNL Metadata]. Här finns inställningssidorna för metadatavy, metadataförinställningar, metadataschema och användardefinierade fält.
+   I **[!UICONTROL Setup > Application Setup]**, är metadatarelaterade inställningssidor nu grupperade i ett avsnitt på den översta nivån som kallas [!DNL Metadata]. Här finns inställningssidorna för metadatavy, metadataförinställningar, metadataschema och användardefinierade fält.
 
 Med det här skrivbordsprogrammet kan du importera befintliga 3D-modeller och redigera dem som 2D-vinjettfiler. De resulterande vinjetteringsfilerna kan överföras till SPS, där färger och texturer kan ersättas vid behov.
 
